--- a/style.css
+++ b/style.css
@@ -20,3 +20,10 @@ h1 {
 .showing {
   display: block;
 }
+.bgImage {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
