--- a/style.css
+++ b/style.css
@@ -20,6 +20,15 @@ h1 {
 .showing {
   display: block;
 }
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 .bgImage {
   position: absolute;
   top: 0;
@@ -27,4 +36,5 @@ h1 {
   width: 100%;
   height: 100%;
   z-index: -1;
+  animation: fadeIn 0.5s linear;
 }
